--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -3,3 +3,51 @@
   text-align: center;
   margin: 10%;
 }
+.Homepage .botonesPaginado {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 40%;
+  margin-right: 40%;
+}
+.Homepage .botonesPaginado button {
+  font-size: 18px;
+  border-radius: 10px;
+}
+.Carddog {
+  background: snow;
+  border-radius: 15px;
+  width: 400px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+}
+.Carddog .imageDog {
+  padding-top: 5%;
+  text-align: center;
+}
+.Carddog .imageDog img {
+  width: 150px;
+  height: 150px;
+  border-radius: 20px;
+}
+.Carddog .info {
+  text-align: center;
+}
+.InputBusqueda {
+  margin-top: 20px;
+  margin-bottom: 5%;
+  display: flex;
+  justify-content: space-around;
+}
+.InputBusqueda input {
+  font-size: 20px;
+  border-radius: 10px;
+}
+.InputBusqueda button {
+  font-size: 18px;
+  border-radius: 10px;
+}
+.InputBusqueda select {
+  font-size: 18px;
+  border-radius: 10px;
+}
