--- a/client/src/less/carddog.less
+++ b/client/src/less/carddog.less
@@ -1,5 +1,5 @@
 .Carddog{
-    background: snow;
+    background: @colorcard;
     border-radius: 15px;
     width: 400px;
     height: 400px;
@@ -16,5 +16,9 @@
     }
     .info{
         text-align: center;
+        a{
+            text-decoration: none;
+            color: black;
+        }
     }
 }
