--- a/client/src/less/dogdetail.less
+++ b/client/src/less/dogdetail.less
@@ -1,3 +1,13 @@
 .contenedor-detalle{
+    background: @fondo;
+    width: 90%;
+    margin: 5%;
+    border-radius: 20px;
     display: flex;
+    img{
+        border-radius: 20px;
+    }
+    div{
+        margin: 5%;
+    }
 }
