--- a/client/src/less/landingpage.less
+++ b/client/src/less/landingpage.less
@@ -1,5 +1,46 @@
 .Landingpage{
-    background: @fondo;
     text-align: center;
-    margin: 10%;
+    height: 960px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .glass-left{
+        height: 100%;
+        width: 50%;
+        box-shadow: 0 0 1rem rgba(0,0,0,0.2);
+        background: @fondo;
+        opacity: 0.6;
+        filter: blur(5px);
+    }
+    .transparent-right{
+        height: 100%;
+        width: 50%;
+    }
+    .contenedor{
+        position: absolute;
+        font-size: 45px;
+        margin-top: 200px;
+        button{
+            background-color: white;
+            font-size: 30px;
+            width: 200px;
+            height: 50px;
+            border-radius: 20px;
+            border-style: none;
+            cursor: pointer;
+        }
+        .contenedor-texto{
+            display: flex;
+            .right-text{
+                margin-left: 5px;
+                text-align: start;
+                color: white;
+            }
+            .left-text{
+                margin-left: 45px;
+                margin-right: 5px;
+                text-align: end;
+            }
+        }
+    }
 }
