--- a/client/src/less/landingpage.less
+++ b/client/src/less/landingpage.less
@@ -1,46 +1,64 @@
 .Landingpage{
     text-align: center;
-    height: 960px;
+    height: 967px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    .glass-left{
+    // justify-content: center;
+    .glass-left{ 
+        h1{
+            margin-top: -100px;
+        }
+        border-radius: 0 5% 5% 0;
+        font-size: 75px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: center;
         height: 100%;
-        width: 50%;
-        box-shadow: 0 0 1rem rgba(0,0,0,0.2);
-        background: @fondo;
-        opacity: 0.6;
-        filter: blur(5px);
+        width: 40%;
+        background: rgba(255, 255, 255, 0.3);
+        box-shadow: 0px 8px 32px 0 rgba(0,0,0,0.3);
+        backdrop-filter: blur(15px);
+        mix-blend-mode: screen;
+        border: 1px solid rgba(255,255,255,0.18)
     }
     .transparent-right{
+        h1{
+            margin-top: -100px;
+        }
         height: 100%;
         width: 50%;
-    }
-    .contenedor{
-        position: absolute;
-        font-size: 45px;
-        margin-top: 200px;
-        button{
-            background-color: white;
-            font-size: 30px;
-            width: 200px;
-            height: 50px;
-            border-radius: 20px;
-            border-style: none;
-            cursor: pointer;
-        }
-        .contenedor-texto{
-            display: flex;
-            .right-text{
-                margin-left: 5px;
-                text-align: start;
-                color: white;
+        font-size: 75px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        .contenedor{
+            position: absolute;
+            font-size: 45px;
+            margin-top: -850px;
+            margin-left: 45%;
+            button{
+                background-color: white;
+                font-size: 30px;
+                width: 220px;
+                height: 60px;
+                border-radius: 25px;
+                border-style: none;
+                cursor: pointer;
+                font-weight: bold;
+                &:hover{
+                    font-weight: bold;
+                    background-color: black;
+                    color: white;
+                    mix-blend-mode: multiply;
+                }
+                mix-blend-mode: screen;
             }
-            .left-text{
-                margin-left: 45px;
-                margin-right: 5px;
-                text-align: end;
-            }
+        }
+        .invisible{
+            margin-bottom: 505px;
         }
     }
+    
 }
