diseños en proceso

--- a/client/src/less/input.less
+++ b/client/src/less/input.less
@@ -1,18 +1,26 @@
 .InputBusqueda{
-    margin-top: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     margin-bottom: 5%;
     display: flex;
     justify-content: space-around;
+    background: @fondo;
     input{
         font-size: 20px;
         border-radius: 10px;
+        border-style: none;
     }
     button{
+        background: white;
         font-size: 18px;
         border-radius: 10px;
+        border-style: 1px solid black;
+        cursor: pointer;
     }
     select{
         font-size: 18px;
         border-radius: 10px;
+        border-style: none;
+        cursor: pointer;
     }
 }
