--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -60,6 +60,9 @@
 .Landingpage .transparent-right .invisible {
   margin-bottom: 505px;
 }
+.Homepage {
+  background-image: url('../image/patron_huellas.jpg');
+}
 .Homepage .botonesPaginado {
   display: flex;
   justify-content: space-evenly;
@@ -67,8 +70,10 @@
   margin-right: 40%;
 }
 .Homepage .botonesPaginado button {
-  font-size: 18px;
+  font-size: 20px;
   border-radius: 10px;
+  border-style: none;
+  cursor: pointer;
 }
 .contenedor-detalle {
   background: #EEEEEE;
@@ -148,22 +153,30 @@
   color: black;
 }
 .InputBusqueda {
-  margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   margin-bottom: 5%;
   display: flex;
   justify-content: space-around;
+  background: #EEEEEE;
 }
 .InputBusqueda input {
   font-size: 20px;
   border-radius: 10px;
+  border-style: none;
 }
 .InputBusqueda button {
+  background: white;
   font-size: 18px;
   border-radius: 10px;
+  border-style: 1px solid black;
+  cursor: pointer;
 }
 .InputBusqueda select {
   font-size: 18px;
   border-radius: 10px;
+  border-style: none;
+  cursor: pointer;
 }
 .Paginado {
   display: flex;
