--- a/client/src/less/homepage.less
+++ b/client/src/less/homepage.less
@@ -1,12 +1,15 @@
 .Homepage{
+    background-image: url('../image/patron_huellas.jpg');
     .botonesPaginado{
         display: flex;
         justify-content: space-evenly;
         margin-left: 40%;
         margin-right: 40%;
         button{
-            font-size: 18px;
+            font-size: 20px;
             border-radius: 10px;
+            border-style: none;
+            cursor: pointer;
         }
     }
 }
