--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -61,7 +61,10 @@
   margin-bottom: 505px;
 }
 .Homepage {
-  background-image: url('../image/patron_huellas.jpg');
+  background-image: url('../image/huellas-2.jpg');
+}
+.Homepage .contenedor-paginado {
+  backdrop-filter: blur(1.5px) brightness(50%);
 }
 .Homepage .botonesPaginado {
   display: flex;
@@ -70,10 +73,17 @@
   margin-right: 40%;
 }
 .Homepage .botonesPaginado button {
-  font-size: 20px;
-  border-radius: 10px;
+  background-color: white;
+  font-size: 25px;
+  font-weight: bold;
+  height: 40px;
+  border-radius: 15px;
   border-style: none;
   cursor: pointer;
+}
+.Homepage .botonesPaginado button:hover {
+  background-color: black;
+  color: white;
 }
 .contenedor-detalle {
   background: #EEEEEE;
@@ -129,7 +139,7 @@
   margin-right: 2%;
 }
 .Carddog {
-  background: #EEEEEE;
+  z-index: 1;
   border-radius: 15px;
   width: 400px;
   height: 400px;
@@ -162,19 +172,27 @@
 }
 .InputBusqueda input {
   font-size: 20px;
-  border-radius: 10px;
+  border-radius: 15px;
   border-style: none;
 }
 .InputBusqueda button {
+  height: 35px;
   background: white;
   font-size: 18px;
-  border-radius: 10px;
-  border-style: 1px solid black;
+  font-weight: bold;
+  border-radius: 15px;
+  border-style: none;
   cursor: pointer;
+  mix-blend-mode: screen;
+}
+.InputBusqueda button:hover {
+  background-color: black;
+  color: white;
+  mix-blend-mode: multiply;
 }
 .InputBusqueda select {
   font-size: 18px;
-  border-radius: 10px;
+  border-radius: 15px;
   border-style: none;
   cursor: pointer;
 }
@@ -182,8 +200,33 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  padding-top: 2%;
+  padding-bottom: 10%;
 }
 .Paginado div {
   margin-top: 5%;
   margin-bottom: 5%;
+}
+.Paginado .glass-div {
+  margin-top: 20px;
+  position: absolute;
+  border-radius: 15px;
+  z-index: -1;
+  height: 400px;
+  width: 400px;
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.Paginado .glass-div2 {
+  margin-top: 20px;
+  position: absolute;
+  border-radius: 15px;
+  z-index: -2;
+  height: 400px;
+  width: 400px;
+  background-image: url('../image/huellas-2.jpg');
+  opacity: 0.55;
+  filter: blur(4px);
 }
