--- a/client/src/less/homepage.less
+++ b/client/src/less/homepage.less
@@ -1,15 +1,25 @@
 .Homepage{
-    background-image: url('../image/patron_huellas.jpg');
+    background-image: url('../image/huellas-2.jpg');
+    .contenedor-paginado{
+        backdrop-filter: blur(1.5px) brightness(50%);
+    }
     .botonesPaginado{
         display: flex;
         justify-content: space-evenly;
         margin-left: 40%;
         margin-right: 40%;
         button{
-            font-size: 20px;
-            border-radius: 10px;
+            background-color: white;
+            font-size: 25px;
+            font-weight: bold;
+            height: 40px;
+            border-radius: 15px;
             border-style: none;
             cursor: pointer;
+            &:hover{
+                background-color: black;
+                color: white;
+            }
         }
     }
 }
