--- a/client/src/less/paginado.less
+++ b/client/src/less/paginado.less
@@ -2,8 +2,33 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    padding-top: 2%;
+    padding-bottom: 10%;
     div{
         margin-top: 5%;
         margin-bottom: 5%;
+    }
+    .glass-div{
+        margin-top: 20px;
+        position: absolute;
+        border-radius: 15px;
+        z-index: -1;
+        height: 400px;
+        width: 400px;
+        background: rgba(255, 255, 255, 0.3);
+        box-shadow: 0px 8px 32px 0 rgba(0,0,0,0.7);
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255,255,255,0.18)
+    }
+    .glass-div2{
+        margin-top: 20px;
+        position: absolute;
+        border-radius: 15px;
+        z-index: -2;
+        height: 400px;
+        width: 400px;
+        background-image: url('../image/huellas-2.jpg');
+        opacity: 0.55;
+        filter: blur(4px);
     }
 }
