Âse crearon los estilos de todas las rutas

--- a/client/src/less/createdog.less
+++ b/client/src/less/createdog.less
@@ -1,22 +1,49 @@
 .Createdog{
-    height: 700px;
-    background: whitesmoke;
-    margin: 5%;
-    border-radius: 20px;
-    text-align: center;
+    .contenedor-glass-createdog{
+        position: absolute;
+        z-index: -1;
+        height: 610px;
+        width: 90%;
+        margin-top: -5%;
+        margin-left: 5%;
+        margin-right: 5%;
+        padding-top: 10px;
+        border-radius: 20px;
+        background: rgba(255, 255, 255, 0.3);
+        box-shadow: 0px 8px 32px 0 rgba(0,0,0,0.3);
+        backdrop-filter: blur(15px);
+        mix-blend-mode: screen;
+        border: 1px solid rgba(255,255,255,0.18)
+    }
     .contenedor-formulario{
-        height: 100%;
-        width: 100%;
+        height: 600px;
+        margin-top: -5%;
+        margin-left: 5%;
+        margin-right: 5%;
+        padding-top: 10px;
+        border-radius: 20px;
+        text-align: center;
         .contenedorinputs{
             display: flex;
             flex-direction: column;
             input{
+                height: 30px;
                 font-size: 20px;
+                font-weight: bold;
                 border-radius: 15px;
+                background: white;
+                border-style: none;
+                mix-blend-mode: screen;
             }
             select{
                 font-size: 20px;
+                font-weight: bold;
                 border-radius: 15px;
+                mix-blend-mode: screen;
+                text-align: center;
+                option{
+                    font-weight: bold;
+                }
             }
             textarea{
                 font-size: 18px;
@@ -31,12 +58,33 @@
                 input{
                     margin-left: 2%;
                     margin-right: 2%;
+                    width: 50px;
+                    text-align: center;
                 }
             }
             .input-peso{
                 input{
                     margin-left: 2%;
                     margin-right: 2%;
+                    width: 50px;
+                    text-align: center;
+                }
+            }
+            .input-vida{
+                width: 50px;
+                text-align: center;
+            }
+            label{
+                font-weight: bold;
+                font-size: 20px;
+            }
+            .boton-createdog{
+                width: 100px;
+                &:hover{
+                    background: black;
+                    color: white;
+                    cursor: pointer;
+                    mix-blend-mode: multiply;
                 }
             }
         }
