--- a/client/src/less/dogdetail.less
+++ b/client/src/less/dogdetail.less
@@ -1,13 +1,31 @@
-.contenedor-detalle{
-    background: @fondo;
-    width: 90%;
-    margin: 5%;
-    border-radius: 20px;
-    display: flex;
-    img{
-        border-radius: 20px;
-    }
-    div{
+.Dogdetail{
+    .contenedor-detalle{
+        height: 445px;
+        width: 90%;
         margin: 5%;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        img{
+            border-radius: 20px;
+        }
+        div{
+            margin: 5%;
+        }
+        .contenedor-glass-detail{
+            position: absolute;
+            z-index: -1;
+            margin-left: 0px;
+            
+            width: 90%;
+            height: 445px;
+            border-radius: 20px;
+            background: rgba(255, 255, 255, 0.3);
+            box-shadow: 0px 8px 32px 0 rgba(0,0,0,0.3);
+            backdrop-filter: blur(15px);
+            mix-blend-mode: screen;
+            border: 1px solid rgba(255,255,255,0.18)
+        }
     }
+    
 }
