--- a/client/src/less/input.less
+++ b/client/src/less/input.less
@@ -26,9 +26,12 @@
         }
     }
     select{
+        background: white;
         font-size: 18px;
+        font-weight: bold;
         border-radius: 15px;
         border-style: none;
         cursor: pointer;
+        mix-blend-mode: screen;
     }
 }
