--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -85,41 +85,80 @@
   background-color: black;
   color: white;
 }
-.contenedor-detalle {
-  background: #EEEEEE;
+.Dogdetail .contenedor-detalle {
+  height: 445px;
   width: 90%;
   margin: 5%;
   border-radius: 20px;
   display: flex;
+  align-items: center;
 }
-.contenedor-detalle img {
+.Dogdetail .contenedor-detalle img {
   border-radius: 20px;
 }
-.contenedor-detalle div {
+.Dogdetail .contenedor-detalle div {
   margin: 5%;
 }
-.Createdog {
-  height: 700px;
-  background: whitesmoke;
-  margin: 5%;
+.Dogdetail .contenedor-detalle .contenedor-glass-detail {
+  position: absolute;
+  z-index: -1;
+  margin-left: 0px;
+  width: 90%;
+  height: 445px;
   border-radius: 20px;
-  text-align: center;
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(15px);
+  mix-blend-mode: screen;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.Createdog .contenedor-glass-createdog {
+  position: absolute;
+  z-index: -1;
+  height: 610px;
+  width: 90%;
+  margin-top: -5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-top: 10px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(15px);
+  mix-blend-mode: screen;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 .Createdog .contenedor-formulario {
-  height: 100%;
-  width: 100%;
+  height: 600px;
+  margin-top: -5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-top: 10px;
+  border-radius: 20px;
+  text-align: center;
 }
 .Createdog .contenedor-formulario .contenedorinputs {
   display: flex;
   flex-direction: column;
 }
 .Createdog .contenedor-formulario .contenedorinputs input {
+  height: 30px;
   font-size: 20px;
+  font-weight: bold;
   border-radius: 15px;
+  background: white;
+  border-style: none;
+  mix-blend-mode: screen;
 }
 .Createdog .contenedor-formulario .contenedorinputs select {
   font-size: 20px;
+  font-weight: bold;
   border-radius: 15px;
+  mix-blend-mode: screen;
+  text-align: center;
+}
+.Createdog .contenedor-formulario .contenedorinputs select option {
+  font-weight: bold;
 }
 .Createdog .contenedor-formulario .contenedorinputs textarea {
   font-size: 18px;
@@ -133,10 +172,31 @@
 .Createdog .contenedor-formulario .contenedorinputs .input-altura input {
   margin-left: 2%;
   margin-right: 2%;
+  width: 50px;
+  text-align: center;
 }
 .Createdog .contenedor-formulario .contenedorinputs .input-peso input {
   margin-left: 2%;
   margin-right: 2%;
+  width: 50px;
+  text-align: center;
+}
+.Createdog .contenedor-formulario .contenedorinputs .input-vida {
+  width: 50px;
+  text-align: center;
+}
+.Createdog .contenedor-formulario .contenedorinputs label {
+  font-weight: bold;
+  font-size: 20px;
+}
+.Createdog .contenedor-formulario .contenedorinputs .boton-createdog {
+  width: 100px;
+}
+.Createdog .contenedor-formulario .contenedorinputs .boton-createdog:hover {
+  background: black;
+  color: white;
+  cursor: pointer;
+  mix-blend-mode: multiply;
 }
 .Carddog {
   z-index: 1;
@@ -191,10 +251,13 @@
   mix-blend-mode: multiply;
 }
 .InputBusqueda select {
+  background: white;
   font-size: 18px;
+  font-weight: bold;
   border-radius: 15px;
   border-style: none;
   cursor: pointer;
+  mix-blend-mode: screen;
 }
 .Paginado {
   display: flex;
@@ -229,4 +292,31 @@
   background-image: url('../image/huellas-2.jpg');
   opacity: 0.55;
   filter: blur(4px);
+}
+.Navbar {
+  width: 100%;
+  height: 55px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  margin-bottom: 10%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #EEEEEE;
+}
+.Navbar button {
+  height: 35px;
+  width: 100px;
+  background: white;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 15px;
+  border-style: none;
+  cursor: pointer;
+  mix-blend-mode: screen;
+}
+.Navbar button:hover {
+  background-color: black;
+  color: white;
+  mix-blend-mode: multiply;
 }
