--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -320,3 +320,29 @@
   color: white;
   mix-blend-mode: multiply;
 }
+.Loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20%;
+  padding-bottom: 35%;
+}
+.Loading .preloader {
+  width: 170px;
+  height: 170px;
+  border: 10px solid #eee;
+  border-top: 10px solid #666;
+  border-radius: 50%;
+  animation-name: girar;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@keyframes girar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
