--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -60,6 +60,68 @@
 .Landingpage .transparent-right .invisible {
   margin-bottom: 505px;
 }
+.Landingpage .glass-left-animation {
+  position: fixed;
+  right: -100vw;
+  transition: 2s;
+  border-radius: 0 5% 5% 0;
+  font-size: 75px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  height: 100%;
+  width: 40%;
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(15px);
+  mix-blend-mode: screen;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.Landingpage .glass-left-animation h1 {
+  margin-top: -100px;
+}
+.Landingpage .transparent-right-animation {
+  position: fixed;
+  right: -100vw;
+  transition: all 2s;
+  height: 100%;
+  width: 50%;
+  font-size: 75px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.Landingpage .transparent-right-animation h1 {
+  margin-top: -100px;
+}
+.Landingpage .transparent-right-animation .contenedor {
+  position: absolute;
+  font-size: 45px;
+  margin-top: -850px;
+  margin-left: 45%;
+}
+.Landingpage .transparent-right-animation .contenedor button {
+  background-color: white;
+  font-size: 30px;
+  width: 220px;
+  height: 60px;
+  border-radius: 25px;
+  border-style: none;
+  cursor: pointer;
+  font-weight: bold;
+  mix-blend-mode: screen;
+}
+.Landingpage .transparent-right-animation .contenedor button:hover {
+  font-weight: bold;
+  background-color: black;
+  color: white;
+  mix-blend-mode: multiply;
+}
+.Landingpage .transparent-right-animation .invisible {
+  margin-bottom: 505px;
+}
 .Homepage {
   background-image: url('../image/huellas-2.jpg');
 }
