se corrigió error en createdog al mostrar temperamentos que agrego

--- a/client/src/less/landingpage.less
+++ b/client/src/less/landingpage.less
@@ -20,6 +20,7 @@
         box-shadow: 0px 8px 32px 0 rgba(0,0,0,0.3);
         backdrop-filter: blur(15px);
         mix-blend-mode: screen;
+        transition: all 2s;
         border: 1px solid rgba(255,255,255,0.18)
     }
     .transparent-right{
@@ -59,6 +60,7 @@
         .invisible{
             margin-bottom: 505px;
         }
+        transition: all 2s;
     }
     .glass-left-animation{
         h1{
@@ -66,7 +68,7 @@
         }
         position: fixed;
         right: -100vw;
-        transition: 2s;
+        transition: all 2s;
         border-radius: 0 5% 5% 0;
         font-size: 75px;
         display: flex;
