--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -17,6 +17,7 @@
   box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(15px);
   mix-blend-mode: screen;
+  transition: all 2s;
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 .Landingpage .glass-left h1 {
@@ -30,6 +31,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  transition: all 2s;
 }
 .Landingpage .transparent-right h1 {
   margin-top: -100px;
@@ -63,7 +65,7 @@
 .Landingpage .glass-left-animation {
   position: fixed;
   right: -100vw;
-  transition: 2s;
+  transition: all 2s;
   border-radius: 0 5% 5% 0;
   font-size: 75px;
   display: flex;
