--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -22,6 +22,7 @@
 }
 .Landingpage .glass-left h1 {
   margin-top: -100px;
+  transition: 1s;
 }
 .Landingpage .transparent-right {
   height: 100%;
@@ -35,6 +36,7 @@
 }
 .Landingpage .transparent-right h1 {
   margin-top: -100px;
+  transition: 1s;
 }
 .Landingpage .transparent-right .contenedor {
   position: absolute;
@@ -62,10 +64,8 @@
 .Landingpage .transparent-right .invisible {
   margin-bottom: 505px;
 }
-.Landingpage .glass-left-animation {
+.Landingpage .mover-left {
   position: fixed;
-  right: -100vw;
-  transition: all 2s;
   border-radius: 0 5% 5% 0;
   font-size: 75px;
   display: flex;
@@ -78,15 +78,17 @@
   box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(15px);
   mix-blend-mode: screen;
+  transform: translateX(500px) scale(3, 1);
+  transition: all 2s;
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
-.Landingpage .glass-left-animation h1 {
+.Landingpage .mover-left h1 {
+  opacity: 0;
   margin-top: -100px;
+  transition: all 0.5s;
 }
-.Landingpage .transparent-right-animation {
-  position: fixed;
-  right: -100vw;
-  transition: all 2s;
+.Landingpage .mover-right {
+  display: none;
   height: 100%;
   width: 50%;
   font-size: 75px;
@@ -94,17 +96,20 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  transition: 1s;
 }
-.Landingpage .transparent-right-animation h1 {
+.Landingpage .mover-right h1 {
+  display: none;
   margin-top: -100px;
 }
-.Landingpage .transparent-right-animation .contenedor {
+.Landingpage .mover-right .contenedor {
+  display: none;
   position: absolute;
   font-size: 45px;
   margin-top: -850px;
   margin-left: 45%;
 }
-.Landingpage .transparent-right-animation .contenedor button {
+.Landingpage .mover-right .contenedor button {
   background-color: white;
   font-size: 30px;
   width: 220px;
@@ -115,13 +120,13 @@
   font-weight: bold;
   mix-blend-mode: screen;
 }
-.Landingpage .transparent-right-animation .contenedor button:hover {
+.Landingpage .mover-right .contenedor button:hover {
   font-weight: bold;
   background-color: black;
   color: white;
   mix-blend-mode: multiply;
 }
-.Landingpage .transparent-right-animation .invisible {
+.Landingpage .mover-right .invisible {
   margin-bottom: 505px;
 }
 .Homepage {
