--- a/client/src/less/landingpage.less
+++ b/client/src/less/landingpage.less
@@ -7,6 +7,7 @@
     .glass-left{ 
         h1{
             margin-top: -100px;
+            transition: 1s;
         }
         border-radius: 0 5% 5% 0;
         font-size: 75px;
@@ -26,6 +27,7 @@
     .transparent-right{
         h1{
             margin-top: -100px;
+            transition: 1s;
         }
         height: 100%;
         width: 50%;
@@ -62,13 +64,13 @@
         }
         transition: all 2s;
     }
-    .glass-left-animation{
+    .mover-left{
         h1{
+            opacity: 0.0;
             margin-top: -100px;
+            transition: all 0.5s;
         }
         position: fixed;
-        right: -100vw;
-        transition: all 2s;
         border-radius: 0 5% 5% 0;
         font-size: 75px;
         display: flex;
@@ -81,15 +83,16 @@
         box-shadow: 0px 8px 32px 0 rgba(0,0,0,0.3);
         backdrop-filter: blur(15px);
         mix-blend-mode: screen;
+        transform:translateX(500px) scale(3,1);
+        transition: all 2s;
         border: 1px solid rgba(255,255,255,0.18)
     }
-    .transparent-right-animation{
+    .mover-right{
+        display: none;
         h1{
+            display: none;
             margin-top: -100px;
         }
-        position: fixed;
-        right: -100vw;
-        transition: all 2s;
         height: 100%;
         width: 50%;
         font-size: 75px;
@@ -98,6 +101,7 @@
         align-items: flex-start;
         justify-content: center;
         .contenedor{
+            display: none;
             position: absolute;
             font-size: 45px;
             margin-top: -850px;
@@ -123,5 +127,7 @@
         .invisible{
             margin-bottom: 505px;
         }
+        transition: 1s;
     }
+    
 }
