--- a/client/src/less/carddog.less
+++ b/client/src/less/carddog.less
@@ -5,6 +5,7 @@
     height: 400px;
     display: flex;
     flex-direction: column;
+    transition: all 2s;
     .imageDog{
         padding-top: 5%;
         text-align: center;
@@ -13,6 +14,7 @@
             height: 150px;
             border-radius: 20px;
         }
+        transition: all 2s;
     }
     .info{
         text-align: center;
@@ -20,5 +22,6 @@
             text-decoration: none;
             color: black;
         }
+        transition: all 2s;
     }
 }
