--- a/client/src/less/createdog.less
+++ b/client/src/less/createdog.less
@@ -34,6 +34,7 @@
                 background: white;
                 border-style: none;
                 mix-blend-mode: screen;
+                text-align: center;
             }
             select{
                 font-size: 20px;
