--- a/client/src/less/input.less
+++ b/client/src/less/input.less
@@ -9,6 +9,7 @@
         font-size: 20px;
         border-radius: 15px;
         border-style: none;
+        text-align: center;
     }
     button{
         height: 35px;
@@ -33,5 +34,6 @@
         border-style: none;
         cursor: pointer;
         mix-blend-mode: screen;
+        text-align: center;
     }
 }
