--- a/client/src/less/paginado.less
+++ b/client/src/less/paginado.less
@@ -1,14 +1,18 @@
 .Paginado{
+    opacity: 1;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding-top: 2%;
     padding-bottom: 10%;
+    transition: all 2s;
     div{
         margin-top: 5%;
         margin-bottom: 5%;
     }
     .glass-div{
+        opacity: 1;
+        transition: all 2s;
         margin-top: 20px;
         position: absolute;
         border-radius: 15px;
@@ -21,6 +25,7 @@
         border: 1px solid rgba(255,255,255,0.18)
     }
     .glass-div2{
+        transition: all 2s;
         margin-top: 20px;
         position: absolute;
         border-radius: 15px;
