se mejoro los alerts

--- a/client/src/less/alert.less
+++ b/client/src/less/alert.less
@@ -31,6 +31,55 @@
     left: 30%;
     right: 30%;
     border-radius: 35px;
+    background: @alertcolorSuccessful;
+    box-shadow: 0px 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(15px);
+    transition: all 2s;
+    border: 1px solid rgba(255,255,255,0.18);
+    .contenedor-texto{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-weight: bold;
+    }
+}
+
+.Alert-successful{
+    position: fixed;
+    top: 12vw;
+    z-index: 1;
+    height: 300px;
+    width: 40%;
+    left: 30%;
+    right: 30%;
+    border-radius: 35px;
+    background: @alertcolorSuccessful;
+    box-shadow: 0px 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(15px);
+    transition: all 2s;
+    border: 1px solid rgba(255,255,255,0.18);
+    .contenedor-texto{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-weight: bold;
+    }
+}
+.Alert-successful-dispel{
+    position: fixed;
+    top: -100vw;
+    z-index: 1;
+    height: 300px;
+    width: 40%;
+    left: 30%;
+    right: 30%;
+    border-radius: 35px;
     background: @alertcolor;
     box-shadow: 0px 8px 32px 0 rgba(0,0,0,0.3);
     backdrop-filter: blur(15px);
@@ -46,3 +95,4 @@
         font-weight: bold;
     }
 }
+
