mejorando las animaciones -para deployar

--- a/client/src/less/lib.less
+++ b/client/src/less/lib.less
@@ -1,5 +1,5 @@
 //variables
-@fondo: #EEEEEE;
+@fondo: #e0e0e0;
 @colorcard: #EEEEEE;
 @alertcolor: #e751514d;
 @alertcolorSuccessful: rgba(209, 231, 81, 0.302);
