--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -131,11 +131,14 @@
 }
 .Homepage {
   background-image: url('../image/huellas-2.jpg');
+  transition: all 1s;
 }
 .Homepage .contenedor-paginado {
+  transition: all 1s;
   backdrop-filter: blur(1.5px) brightness(50%);
 }
 .Homepage .botonesPaginado {
+  transition: all 1s;
   display: flex;
   justify-content: space-evenly;
   margin-left: 40%;
@@ -154,7 +157,29 @@
   background-color: black;
   color: white;
 }
+.Homepage .botonesPaginado-dispel {
+  opacity: 0;
+  transition: all 1s;
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 40%;
+  margin-right: 40%;
+}
+.Homepage .botonesPaginado-dispel button {
+  background-color: white;
+  font-size: 25px;
+  font-weight: bold;
+  height: 40px;
+  border-radius: 15px;
+  border-style: none;
+  cursor: pointer;
+}
+.Homepage .botonesPaginado-dispel button:hover {
+  background-color: black;
+  color: white;
+}
 .Dogdetail .contenedor-detalle {
+  transition: 1s;
   height: 445px;
   width: 90%;
   margin: 5%;
@@ -169,6 +194,7 @@
   margin: 5%;
 }
 .Dogdetail .contenedor-detalle .contenedor-glass-detail {
+  transition: all 1s;
   position: absolute;
   z-index: -1;
   margin-left: 0px;
@@ -180,6 +206,39 @@
   backdrop-filter: blur(15px);
   mix-blend-mode: screen;
   border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.Dogdetail .contenedor-detalle-dispel {
+  opacity: 0;
+  transition: opacity 1s;
+  height: 445px;
+  width: 90%;
+  margin: 5%;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+}
+.Dogdetail .contenedor-detalle-dispel img {
+  border-radius: 20px;
+}
+.Dogdetail .contenedor-detalle-dispel div {
+  margin: 5%;
+}
+.Dogdetail .contenedor-detalle-dispel .contenedor-glass-detail {
+  transition: all 1s;
+  position: absolute;
+  z-index: -1;
+  margin-left: 0px;
+  width: 90%;
+  height: 445px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(15px);
+  mix-blend-mode: screen;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.Createdog {
+  transition: all 1s;
 }
 .Createdog .contenedor-glass-createdog {
   position: absolute;
@@ -268,6 +327,97 @@
   cursor: pointer;
   mix-blend-mode: multiply;
 }
+.Createdog-dispel {
+  transition: all 2s;
+  opacity: 0;
+}
+.Createdog-dispel .contenedor-glass-createdog {
+  position: absolute;
+  z-index: -1;
+  height: 610px;
+  width: 90%;
+  margin-top: -5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-top: 10px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(15px);
+  mix-blend-mode: screen;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.Createdog-dispel .contenedor-formulario {
+  height: 600px;
+  margin-top: -5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-top: 10px;
+  border-radius: 20px;
+  text-align: center;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs {
+  display: flex;
+  flex-direction: column;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs input {
+  height: 30px;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 15px;
+  background: white;
+  border-style: none;
+  mix-blend-mode: screen;
+  text-align: center;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs select {
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 15px;
+  mix-blend-mode: screen;
+  text-align: center;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs select option {
+  font-weight: bold;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs textarea {
+  font-size: 18px;
+  border-radius: 15px;
+  width: 60%;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs div {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs .input-altura input {
+  margin-left: 2%;
+  margin-right: 2%;
+  width: 50px;
+  text-align: center;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs .input-peso input {
+  margin-left: 2%;
+  margin-right: 2%;
+  width: 50px;
+  text-align: center;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs .input-vida {
+  width: 50px;
+  text-align: center;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs label {
+  font-weight: bold;
+  font-size: 20px;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs .boton-createdog {
+  width: 100px;
+}
+.Createdog-dispel .contenedor-formulario .contenedorinputs .boton-createdog:hover {
+  background: black;
+  color: white;
+  cursor: pointer;
+  mix-blend-mode: multiply;
+}
 .Carddog {
   z-index: 1;
   border-radius: 15px;
@@ -301,7 +451,7 @@
   margin-bottom: 5%;
   display: flex;
   justify-content: space-around;
-  background: #EEEEEE;
+  background: #e0e0e0;
 }
 .InputBusqueda input {
   font-size: 20px;
@@ -335,6 +485,7 @@
   text-align: center;
 }
 .Paginado {
+  transition: all 1s;
   opacity: 1;
   display: flex;
   flex-wrap: wrap;
@@ -373,6 +524,46 @@
   opacity: 0.55;
   filter: blur(4px);
 }
+.Paginado-dispel {
+  transition: all 1s;
+  opacity: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding-top: 2%;
+  padding-bottom: 10%;
+  transition: all 2s;
+}
+.Paginado-dispel div {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+.Paginado-dispel .glass-div {
+  opacity: 1;
+  transition: all 2s;
+  margin-top: 20px;
+  position: absolute;
+  border-radius: 15px;
+  z-index: -1;
+  height: 400px;
+  width: 400px;
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.Paginado-dispel .glass-div2 {
+  transition: all 2s;
+  margin-top: 20px;
+  position: absolute;
+  border-radius: 15px;
+  z-index: -2;
+  height: 400px;
+  width: 400px;
+  background-image: url('../image/huellas-2.jpg');
+  opacity: 0.55;
+  filter: blur(4px);
+}
 .Navbar {
   width: 100%;
   height: 55px;
@@ -382,7 +573,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background: #EEEEEE;
+  background: #e0e0e0;
 }
 .Navbar button {
   height: 35px;
