--- a/client/src/less/homepage.less
+++ b/client/src/less/homepage.less
@@ -1,9 +1,33 @@
 .Homepage{
     background-image: url('../image/huellas-2.jpg');
+    transition: all 1s;
     .contenedor-paginado{
+        transition: all 1s;
         backdrop-filter: blur(1.5px) brightness(50%);
     }
     .botonesPaginado{
+        transition: all 1s;
+        display: flex;
+        justify-content: space-evenly;
+        margin-left: 40%;
+        margin-right: 40%;
+        button{
+            background-color: white;
+            font-size: 25px;
+            font-weight: bold;
+            height: 40px;
+            border-radius: 15px;
+            border-style: none;
+            cursor: pointer;
+            &:hover{
+                background-color: black;
+                color: white;
+            }
+        }
+    }
+    .botonesPaginado-dispel{
+        opacity: 0;
+        transition: all 1s;
         display: flex;
         justify-content: space-evenly;
         margin-left: 40%;
@@ -23,3 +47,5 @@
         }
     }
 }
+
+
